// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`excludes things when asked 1`] = `
Array [
  Object {
    "enums": Array [
      Object {
        "name": "source",
        "values": Array [
          "github",
          "bitbucket",
        ],
      },
    ],
    "flavor": "pg",
    "name": "public",
    "tables": Array [
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "id",
            "nullable": false,
            "type": "string",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": "CURRENT_TIMESTAMP",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": "CURRENT_TIMESTAMP",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
          },
        ],
        "comment": "Users can have multiple accounts",
        "name": "users",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
        "uniqueConstraints": Array [],
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "id",
            "nullable": false,
            "type": "string",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": "CURRENT_TIMESTAMP",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": "CURRENT_TIMESTAMP",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
          },
          Object {
            "columnType": "USER-DEFINED",
            "comment": null,
            "defaultTo": null,
            "enumPath": "public.source",
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "source",
            "nullable": false,
            "type": "enum",
          },
          Object {
            "columnType": "text",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "uniqueIdentifier",
            "nullable": false,
            "type": "string",
          },
          Object {
            "columnType": "text",
            "comment": "Users can have multiple accounts",
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [
              Object {
                "column": "id",
                "schema": "public",
                "table": "users",
              },
            ],
            "hasDefault": true,
            "name": "userId",
            "nullable": false,
            "type": "string",
          },
          Object {
            "columnType": "jsonb",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "rawUserData",
            "nullable": true,
            "type": "AnyJson",
          },
        ],
        "comment": "UserAccount table comment",
        "name": "userAccounts",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
        "uniqueConstraints": Array [],
      },
    ],
  },
]
`;

exports[`returns a schema in the right shape 1`] = `
Array [
  Object {
    "enums": Array [
      Object {
        "name": "source",
        "values": Array [
          "github",
          "bitbucket",
        ],
      },
    ],
    "flavor": "pg",
    "name": "public",
    "tables": Array [
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "id",
            "nullable": false,
            "type": "string",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": "CURRENT_TIMESTAMP",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": "CURRENT_TIMESTAMP",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
          },
        ],
        "comment": "Users can have multiple accounts",
        "name": "users",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
        "uniqueConstraints": Array [],
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "integer",
            "comment": null,
            "defaultTo": "nextval('knex_migrations_id_seq'::regclass)",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "id",
            "nullable": false,
            "type": "number",
          },
          Object {
            "columnType": "character varying",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "name",
            "nullable": true,
            "type": "string",
          },
          Object {
            "columnType": "integer",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "batch",
            "nullable": true,
            "type": "number",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "migration_time",
            "nullable": true,
            "type": "Date",
          },
        ],
        "comment": null,
        "name": "knex_migrations",
        "primaryKeyColumn": "id",
        "primaryKeyType": "number",
        "uniqueConstraints": Array [],
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "integer",
            "comment": null,
            "defaultTo": "nextval('knex_migrations_lock_index_seq'::regclass)",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "index",
            "nullable": false,
            "type": "number",
          },
          Object {
            "columnType": "integer",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "is_locked",
            "nullable": true,
            "type": "number",
          },
        ],
        "comment": null,
        "name": "knex_migrations_lock",
        "primaryKeyColumn": "index",
        "primaryKeyType": "number",
        "uniqueConstraints": Array [],
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "id",
            "nullable": false,
            "type": "string",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": "CURRENT_TIMESTAMP",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "created_at",
            "nullable": false,
            "type": "Date",
          },
          Object {
            "columnType": "timestamp with time zone",
            "comment": null,
            "defaultTo": "CURRENT_TIMESTAMP",
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
          },
          Object {
            "columnType": "USER-DEFINED",
            "comment": null,
            "defaultTo": null,
            "enumPath": "public.source",
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "source",
            "nullable": false,
            "type": "enum",
          },
          Object {
            "columnType": "text",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "uniqueIdentifier",
            "nullable": false,
            "type": "string",
          },
          Object {
            "columnType": "text",
            "comment": "Users can have multiple accounts",
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [
              Object {
                "column": "id",
                "schema": "public",
                "table": "users",
              },
            ],
            "hasDefault": true,
            "name": "userId",
            "nullable": false,
            "type": "string",
          },
          Object {
            "columnType": "jsonb",
            "comment": null,
            "defaultTo": null,
            "enumPath": undefined,
            "foreignKeys": Array [],
            "hasDefault": true,
            "name": "rawUserData",
            "nullable": true,
            "type": "AnyJson",
          },
        ],
        "comment": "UserAccount table comment",
        "name": "userAccounts",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
        "uniqueConstraints": Array [],
      },
    ],
  },
]
`;
